--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
         </div>
     </header>
     <main>
+        <div class="filtre-container">
+            <div class="filtre-select">
+                <select>
+                    <option>Ingrédients</option>
+                </select>
+                <select>
+                    <option>Appareils</option>
+                </select>
+                <select>
+                    <option>Ustensils</option>
+                </select>
+            </div>
+            <p id="nb-recipes"></p>
+        </div>
         <section id="recipes">
 
         </section>
