Show filtre select

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
     <main>
         <div class="filtre-container">
             <div class="filtre-select">
-                <select>
+                <select id="filtre-ingredients">
                     <option>Ingrédients</option>
+                    <option>-------</option>
                 </select>
-                <select>
+                <select id="filtre-appareils">
                     <option>Appareils</option>
+                    <option>-------</option>
                 </select>
-                <select>
+                <select id="filtre-ustensils">
                     <option>Ustensils</option>
+                    <option>-------</option>
                 </select>
             </div>
             <p id="nb-recipes"></p>
