ajout clear filter + chacher les filtre actif

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="filtre-input">
                             <input type="text" name="ingredients-search" id="ingredients-search" onkeyup="filterElement(this);">
                             <div class="filtre-icon">
-                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearSearch(this)">
+                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearFilter(this)">
                                 <img src="assets/svg/search-grey.svg" alt="Search icon">
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                         <div class="filtre-input">
                             <input type="text" name="ingredients-search" id="appareils-search" onkeyup="filterElement(this);">
                             <div class="filtre-icon">
-                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearSearch(this)">
+                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearFilter(this)">
                                 <img src="assets/svg/search-grey.svg" alt="Search icon">
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                         <div class="filtre-input">
                             <input type="text" name="ustensils-search" id="ustensils-search" onkeyup="filterElement(this);">
                             <div class="filtre-icon">
-                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearSearch(this)">
+                                <img src="assets/svg/close.svg" alt="close btn" onclick="clearFilter(this)">
                                 <img src="assets/svg/search-grey.svg" alt="Search icon">
                             </div>
                         </div>
