--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="css/main.css">
 
-    <script src="./js/recipes.js" type="text/javascript"></script>
+    <script src="./js/recipes.js"></script>
 
 <!--    FONT     -->
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
@@ -24,7 +24,7 @@
             <h1>
                 CHERCHEZ PARMI PLUS DE 1500 RECETTES DU QUOTIDIEN,SIMPLES ET DÉLICIEUSES
             </h1>
-            <form id="search-form" action="" method="get" class="head-input">
+            <form id="search-form" method="get" class="head-input">
                 <input type="text" name="search-bar" id="search-bar" placeholder="Rechercher une recette, un ingrédient, ...">
                 <img src="assets/svg/close.svg" alt="close btn" class="clear-searchbar" onclick="clearSearch(this)">
                 <button type="submit"><img src="assets/svg/search-white.svg" alt="Bouton de recherche"></button>
@@ -100,9 +100,9 @@
         <div id="filtre-selected" class="filtre-select-container">
         </div>
 
-        <section id="recipes">
+        <div id="recipes">
 
-        </section>
+        </div>
     </main>
 
     <script src="js/displayRecipes.js"></script>
